feat: paper-pro JNA .so 强混淆（独立 server.jar 版）